# python-starter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
python_starter/: __init__.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Dockerfile  mypy.ini  noxfile.py  pyproject.toml
