[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = ""
authors = ["Riley Shea <rileymshea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"
GitPython = "^3.1.20"

[tool.poetry.scripts]
{{cookiecutter.repo_name}} = "{{cookiecutter.repo_name}}.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^21.8-beta.0"
ipykernel = "^6.3.1"
isort = "^5.9.3"
rope = "^0.19.0"
mypy = "^0.910"
pyupgrade = "^2.25.0"
pre-commit = "^2.15.0"


[tool.poetry.group.tests.dependencies]
nox = "^2021.6.12"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
nox-poetry = "^0.8.6"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
